                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-06-2006 changed: you can now also remove extensions using advancedsettings.xml (see manual).
 - 10-06-2006 changed: moved region setting from date & time to appearance
 - 10-06-2006 fixed: Initial control focus didn't observe the controlgroup's previous focus.
 - 10-06-2006 fixed: <label> in button controls didn't accept $INFO[] labels.
 - 10-06-2006 added: set source thumbnail in gui. access from context menu.
 - 09-06-2006 fixed: Watched status is preserved across views, rather than being separate.
 - 09-06-2006 fixed: Recursive slideshow is only enabled if there are subfolders
 - 09-06-2006 fixed: Thumbloader would attempt to open .rar and .zip in Music and Videos.
 - 09-06-2006 fixed: System.HasAlarm(name) only worked in lowercase, and was only checked on window load.
 - 09-06-2006 fixed: Initial control visibility for the list/thumb controls wasn't set correctly for Media window WindowOpen animations.
 - 09-06-2006 changed: Removed playlist track format from GUI - it just uses the music track format unless you specify otherwise using advancedsettings.xml.
 - 09-06-2006 fixed: stack file size.
 - 08-06-2006 added: Support for START to select Done in Numeric dialog.
 - 08-06-2006 fixed: Screensaver preview did not show the correct screensaver if music or video was playing.
 - 08-06-2006 fixed: Delete on playlists/smart playlists could delete all their files as well.
 - 08-06-2006 changed: Cleaned up some more settings (postprocessing to xml only, use auto sync removed (use mplayer.conf), and subtitles default to arial.ttf.